version 0.61.0
02/08/2018
	- Updated Krill and Koral versions enabling VC caching and referencing (margaretha)
	
version 0.60.5
09/07/2018
	- Fixed status codes (margaretha)
	- Added KustvaktException for wrapping another exception (margaretha)
	- Removed deprecated codes regarding KustvaktResource (margaretha)
	
version 0.60.4
25/06/2018
	- added the redirect URI property in KustvaktException (margaretha)
	- added openid related status codes (margaretha)

version 0.60.3
30/05/2018
	- added parameter checker for collection (margaretha)
	- updated krill version (margaretha)
	
version 0.60.2
25/04/2018
	- rearranged and cleaned up codes (margaretha)
	- generalized some KustvaktException methods (margaretha)
	- added status codes (margaretha)
	- updated FormRequestWrapper constructor (margaretha)
	- fixed get request null parameter in FormRequestWrapper (margaretha)
	
version 0.60.1
14/03/2018
	- removed AdminHandlerIface (margaretha)
	- removed isSystemAdmin in User class (margaretha)

version 0.60
13/03/2018
	- removed old policy and deprecated code (margaretha)
	- moved authentication related code to /full (margaretha)
	- elaborated default layer names in the configuration file (margaretha)
	- added GROUP_DELETED status code (margaretha)

version 0.59.10 
20/02/2018
	- updated hibernate and reflection versions (margaretha)
	- added Changes file (margaretha)
	- merged BeanConfigBaseTest to BeanConfigTest in /full (margaretha)
	- added status code for already deleted entry (margaretha)
	- updated library versions and java environment (margaretha)
	- added status codes (margaretha)
	- moved validation.properties (margaretha)
	- fixed unrecognized media-type application/json (margaretha)
	
version 0.59.9 	
08/11/2017
	- fixed missing exception in JsonUtils (margaretha)
	- fixed and restructured KustvaktResponseHandler (margaretha)
	- updated status code in ParameterChecker (margaretha)
	
version 0.59.8 
24/10/2017